refactoring java_IO module