@@ -1,18 +1,18 @@
-import java.util.Arrays;
-import java.util.Collections;
+package mainTask;
+
 import java.util.List;
 import java.util.Random;
 
 public enum Color {
 
-    YELLOW,WHITE,BLACK,RED,GREEN,BROWN;
+    YELLOW, WHITE, BLACK, RED, GREEN, BROWN;
 
     private static final List<Color> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+            List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
-    public static Color randomColor()  {
+    public static Color randomColor() {
         return VALUES.get(RANDOM.nextInt(SIZE));
     }
 }
